--- a/index.html
+++ b/index.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ancient Hindu Scriptures</title>
+    <title>Kavyapath - A Digital Poetry Platform</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <nav class="navbar">
+        <h1>✨ Kavyapath ✨</h1>
+        <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+        <ul class="nav-links">
+            <li><a href="#shloka-section">Featured</a></li>
+            <li><a href="#shloka-list">More Shlokas</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
         <header>
-            <h1>✨ Ancient Hindu Scriptures ✨</h1>
-            <p>Wisdom from the Vedas, Upanishads, and Puranas</p>
+            <h1>Wisdom from the Vedas, Upanishads, and Puranas</h1>
         </header>
 
         <section id="shloka-section">
             <h2>🕉 Featured Shloka</h2>
-            <p class="shloka" id="shloka-text">
-                "ॐ असतो मा सद्गमय, तमसो मा ज्योतिर्गमय, मृत्युर्मा अमृतं गमय"
-            </p>
-            <button class="show-translation-btn" data-translation="Lead us from the unreal to the real, Lead us from darkness to light, Lead us from death to immortality.">🔍 Show Translation</button>
-            <p class="translation hidden"></p>
+            <p class="shloka">"चक्षुरध्ययनम, वचन श्रवणम, सवमककतम"</p>
+            <button class="show-translation-btn">🔍 Show Translation</button>
+            <p class="translation hidden">दखना अध्ययन ह, सनना श्रवण ह, सब कछ एकीकत ह</p>
         </section>
 
         <section id="shloka-list">
             <h2>📜 More Shlokas</h2>
-            <div class="shloka-item">
-                <p class="shloka">"कर्मण्येवाधिकारस्ते मा फलेषु कदाचन"</p>
-                <button class="show-translation-btn" data-translation="Your right is to perform your duty only, but never to its fruits.">🔍 Show Translation</button>
-                <p class="translation hidden"></p>
-            </div>
+            <div class="shloka-grid">
+                <div class="shloka-item">
+                    <p class="shloka">"न च प्राण संज्ञो न व पञ्चवाय: ..."</p>
+                    <button class="show-translation-btn">🔍 Show Translation</button>
+                    <p class="translation hidden">यह श्लोक बताता ह...</p>
+                </div>
 
-            <div class="shloka-item">
-                <p class="shloka">"विद्या ददाति विनयम् विनयाद्याति पात्रताम्"</p>
-                <button class="show-translation-btn" data-translation="Knowledge gives humility, and humility leads to worthiness.">🔍 Show Translation</button>
-                <p class="translation hidden"></p>
+                <div class="shloka-item">
+                    <p class="shloka">" सग्रहकस्य यन्त्र, वतमानस्य गत..."</p>
+                    <button class="show-translation-btn">🔍 Show Translation</button>
+                    <p class="translation hidden">सग्रहकता की मशीन...</p>
+                </div>
             </div>
         </section>
-
-        <footer>
-            <p>🕉 &copy; 2025 Ancient Hindu Scriptures | Hackathon Project 🕉</p>
-        </footer>
     </div>
+
+    <footer>
+        <p>🕉 &copy; 2025 Ancient Hindu Scriptures | Hackathon Project 🕉</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
