--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar">
-        <h1>✨ Kavyapath ✨</h1>
+        <h1>✨ Kavyapath - A Digital Poetry Platform ✨</h1>
         <button class="menu-toggle" aria-label="Toggle menu">☰</button>
         <ul class="nav-links">
             <li><a href="#shloka-section">Featured</a></li>
@@ -27,7 +27,9 @@
             <h2>🕉 Featured Shloka</h2>
             <p class="shloka">"चक्षुरध्ययनम, वचन श्रवणम, सवमककतम"</p>
             <button class="show-translation-btn">🔍 Show Translation</button>
-            <p class="translation hidden">दखना अध्ययन ह, सनना श्रवण ह, सब कछ एकीकत ह</p>
+            <p class="translation hidden"> "दखना अध्ययन ह, 
+                सनना श्रवण ह, 
+                सब कछ एकीकत ह" </p>
         </section>
 
         <section id="shloka-list">
@@ -36,13 +38,19 @@
                 <div class="shloka-item">
                     <p class="shloka">"न च प्राण संज्ञो न व पञ्चवाय: ..."</p>
                     <button class="show-translation-btn">🔍 Show Translation</button>
-                    <p class="translation hidden">यह श्लोक बताता ह...</p>
+                    <p class="translation hidden">यह श्लोक बताता ह क म न तो प्राण (जीवन शिक्त) ह, न ही शरीर म बहन वाली पाँच प्रकार की वाय। न म शरीर 
+                        क सात मल तत्वों (धातओ) स बना ह और न ही पाँच आवरणों (पचकोश) स घरा ह। न म वाणी (बोलन की 
+                        शिक्त) ह, न मर हाथ-पाँव ह, और न ही मल-मत्र त्याग की प्र या स मरा कोई सबध ह। म शद्ध आत्मा ह, जो 
+                        इन सबस पर ह, और म ही शव ह।</p>
                 </div>
 
                 <div class="shloka-item">
                     <p class="shloka">" सग्रहकस्य यन्त्र, वतमानस्य गत..."</p>
                     <button class="show-translation-btn">🔍 Show Translation</button>
-                    <p class="translation hidden">सग्रहकता की मशीन...</p>
+                    <p class="translation hidden"> "सग्रहकता की मशीन, 
+                        वतमान का पथ, 
+                        आधार का शल्प" 
+                        </p>
                 </div>
             </div>
         </section>
